# libuv_cmake

./: CMakeLists.txt  README.md
cmake/in/: libuv.in
src/: CMakeLists.txt  main.cpp
